--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!doctype html5>
 <html>
   <body>
+  <h1>hellow</h1>
     <div id="content"></div>
+    <div id="test">test</div>
     <script src="bundle.js"></script>
   </body>
 </html>
